--- a/index.html
+++ b/index.html
@@ -472,6 +472,10 @@
             setInterval(function(){document.getElementById("creep").play()},9000)
             setInterval(function(){document.getElementById("creep2").play()},15000)
             }
+            function off(){
+            document.getElementById("creep").pause()
+            document.getElementById("creep2").pause()
+            }
 
 
     </style>
