--- a/index.html
+++ b/index.html
@@ -476,6 +476,9 @@
             document.getElementById("creep").pause()
             document.getElementById("creep2").pause()
             }
+            function ment(){
+                
+            }
 
 
     </style>
