--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             document.getElementById("creep2").pause()
             }
             function ment(){
-                
+                document.getElementsByTagName("div")[0].classList.remove("up")
             }
 
 
