--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
             }
             function ment(){
                 document.getElementsByTagName("div")[0].classList.remove("up")
+                document.getElementById("p1").innerHTML="Resume"
             }
 
 
