--- a/index.html
+++ b/index.html
@@ -480,6 +480,9 @@
                 document.getElementsByTagName("div")[0].classList.remove("up")
                 document.getElementById("p1").innerHTML="Resume"
             }
+            function opt(){
+                
+            }
 
 
     </style>
