--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 document.getElementById("p1").innerHTML="Resume"
             }
             function opt(){
-                
+                if(document.getElementById)
             }
 
 
