--- a/index.html
+++ b/index.html
@@ -481,7 +481,9 @@
                 document.getElementById("p1").innerHTML="Resume"
             }
             function opt(){
-                if(document.getElementById)
+                if(document.getElementById("s1").style.display!="flex"){
+                    document
+                }
             }
 
 
