--- a/index.html
+++ b/index.html
@@ -482,7 +482,10 @@
             }
             function opt(){
                 if(document.getElementById("s1").style.display!="flex"){
-                    document.getElementById
+                    document.getElementById("s1").style.display="flex"
+                }
+                else{
+                    
                 }
             }
 
