--- a/index.html
+++ b/index.html
@@ -485,8 +485,12 @@
                     document.getElementById("s1").style.display="flex"
                 }
                 else{
-                    
+                    document.getElementById("s1").style.display="none"
                 }
+            }
+            var x=1
+            function start(){
+                
             }
 
 
