--- a/index.html
+++ b/index.html
@@ -490,7 +490,10 @@
             }
             var x=1
             function start(){
-                
+                if(x==1){
+                    document.getElementById("music").play()
+                    document
+                }
             }
 
 
