--- a/index.html
+++ b/index.html
@@ -492,7 +492,10 @@
             function start(){
                 if(x==1){
                     document.getElementById("music").play()
-                    document
+                    document.getElementById("sound").play()
+                    setTimeout(function(){
+                        document.getElementById("sound").pause()
+                    },1000)
                 }
             }
 
