--- a/index.html
+++ b/index.html
@@ -496,7 +496,13 @@
                     setTimeout(function(){
                         document.getElementById("sound").pause()
                     },1000)
+                    setTimeout(function(){
+                        po.style.display="inline-block"
+                    },3000)
+                    animate()
                 }
+                x++;
+                
             }
 
 
