--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
                     animate()
                 }
                 x++;
+                document.getElementsByTagName
                 
             }
 
