--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                     animate()
                 }
                 x++;
-                document.getElementsByTagName
+                document.getElementsByTagName("div")[0].classList
                 
             }
 
