--- a/index.html
+++ b/index.html
@@ -502,8 +502,7 @@
                     animate()
                 }
                 x++;
-                document.getElementsByTagName("div")[0].classList
-                
+                document.getElementsByTagName("div")[0].classList.add("up")   
             }
 
 
