--- a/index.html
+++ b/index.html
@@ -505,6 +505,9 @@
                 document.getElementsByTagName("div")[0].classList.add("up")   
             }
             /////////////
+            function input(){
+                
+            }
 
 
     </style>
