--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             }
             /////////////
             function input(){
-                
+                name=document.getElementById("name").value
             }
 
 
