--- a/index.html
+++ b/index.html
@@ -508,6 +508,10 @@
             function input(){
                 name=document.getElementById("name").value
             }
+            /////////////
+            function submit(){
+                
+            }
 
 
     </style>
