--- a/index.html
+++ b/index.html
@@ -510,7 +510,8 @@
             }
             /////////////
             function submit(){
-                
+                console.log(name)
+                if
             }
 
 
