--- a/index.html
+++ b/index.html
@@ -511,7 +511,9 @@
             /////////////
             function submit(){
                 console.log(name)
-                if
+                if(document.getElementById("yes").checked){
+                    po.innerHTML="<b style='color:red;'>Boss:</b> Sorry about your wife and kids(pauses)..Agent <i style=
+                }
             }
 
 
