--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             function submit(){
                 console.log(name)
                 if(document.getElementById("yes").checked){
-                    po.innerHTML="<b style='color:red;'>Boss:</b> Sorry about your wife and kids(pauses)..Agent <i style=
+                    po.innerHTML="<b style='color:red;'>Boss:</b> Sorry about your wife and kids(pauses)..Agent <i style='color:purple;'>"+name+"</i> the future of the entire
                 }
             }
 
