--- a/index.html
+++ b/index.html
@@ -512,8 +512,9 @@
             function submit(){
                 console.log(name)
                 if(document.getElementById("yes").checked){
-                    po.innerHTML="<b style='color:red;'>Boss:</b> Sorry about your wife and kids(pauses)..Agent <i style='color:purple;'>"+name+"</i> the future of the entire
+                    po.innerHTML="<b style='color:red;'>Boss:</b> Sorry about your wife and kids(pauses)..Agent <i style='color:purple;'>"+name+"</i> the future of the entire planet is in your hands... you're <i>HIRED!!</i>"
                 }
+                
             }
 
 
