--- a/index.html
+++ b/index.html
@@ -514,9 +514,10 @@
                 if(document.getElementById("yes").checked){
                     po.innerHTML="<b style='color:red;'>Boss:</b> Sorry about your wife and kids(pauses)..Agent <i style='color:purple;'>"+name+"</i> the future of the entire planet is in your hands... you're <i>HIRED!!</i>"
                 setTimeout(function(){
-                    
-                })
-                }
+                    po.style.display="none"
+                },2000)
+                }else if(document.getElementById)
+            
 
             }
 
