--- a/index.html
+++ b/index.html
@@ -516,7 +516,9 @@
                 setTimeout(function(){
                     po.style.display="none"
                 },2000)
-                }else if(document.getElementById)
+                }else if(document.getElementById("no").checked){
+                    po.innerHTML
+                }
             
 
             }
