--- a/index.html
+++ b/index.html
@@ -544,6 +544,9 @@
                     document.getElementById("next").innerHTML="Wave "+ wave
                     target=wave*20
                     }
+                    if(pow===0){
+                        
+                    }
 
             }
 
