--- a/index.html
+++ b/index.html
@@ -545,6 +545,9 @@
                     target=wave*20
                     }
                     if(pow===0){
+                        power.style.background="grey"
+                    }
+                    else{
                         
                     }
 
