--- a/index.html
+++ b/index.html
@@ -548,8 +548,9 @@
                         power.style.background="grey"
                     }
                     else{
-                        
+                        power.style.background="linear-gradient(200deg,red 1%, white)"
                     }
+                },10)
 
             }
 
