--- a/index.html
+++ b/index.html
@@ -551,6 +551,14 @@
                         power.style.background="linear-gradient(200deg,red 1%, white)"
                     }
                 },10)
+                function help(){
+                    if(document.getElementById("s2").style.display!="flex"){
+                        document.getElementById("s2").style.display="flex"
+                    }
+                    else{
+                        
+                    }
+                }
 
             }
 
