--- a/index.html
+++ b/index.html
@@ -556,11 +556,18 @@
                         document.getElementById("s2").style.display="flex"
                     }
                     else{
-                        
+                        document.getElementById("s2").style.display="none"
                     }
                 }
 
-            }
+
+
+
+        //////////////GAMEPLAY////////////     
+        ///////////////////////////////////////   
+            var canva=document.getElementById("c2")
+            var ctx=canva.getContext("2d")
+            
 
 
     </style>
