--- a/index.html
+++ b/index.html
@@ -567,6 +567,7 @@
         ///////////////////////////////////////   
             var canva=document.getElementById("c2")
             var ctx=canva.getContext("2d")
+            var arena=document.getElementById("arena")
             
 
 
