--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
             var canva=document.getElementById("c2")
             var ctx=canva.getContext("2d")
             var arena=document.getElementById("arena")
+            var life=document.getElementById("life")
             
 
 
