--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             var ctx=canva.getContext("2d")
             var arena=document.getElementById("arena")
             var life=document.getElementById("life")
-            
+            var power=document.getElementById
 
 
     </style>
