--- a/index.html
+++ b/index.html
@@ -569,7 +569,8 @@
             var ctx=canva.getContext("2d")
             var arena=document.getElementById("arena")
             var life=document.getElementById("life")
-            var power=document.getElementById
+            var power=document.getElementById(powerup)
+            
 
 
     </style>
