--- a/index.html
+++ b/index.html
@@ -570,7 +570,8 @@
             var arena=document.getElementById("arena")
             var life=document.getElementById("life")
             var power=document.getElementById(powerup)
-            var dialog=document.getElementById()
+            var dialog=document.getElementById(po)
+            var 
 
 
     </style>
