--- a/index.html
+++ b/index.html
@@ -569,9 +569,9 @@
             var ctx=canva.getContext("2d")
             var arena=document.getElementById("arena")
             var life=document.getElementById("life")
-            var power=document.getElementById(powerup)
-            var dialog=document.getElementById(po)
-            var 
+            var power=document.getElementById("powerup")
+            var dialog=document.getElementById("po")
+            var score=document.getElementById("score")
 
 
     </style>
