--- a/index.html
+++ b/index.html
@@ -572,6 +572,7 @@
             var power=document.getElementById("powerup")
             var dialog=document.getElementById("po")
             var score=document.getElementById("score")
+            var pos=0
 
 
     </style>
