--- a/index.html
+++ b/index.html
@@ -573,6 +573,7 @@
             var dialog=document.getElementById("po")
             var score=document.getElementById("score")
             var pos=0
+            var ps=0
 
 
     </style>
