--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
             var score=document.getElementById("score")
             var pos=0
             var ps=0
+            var pow=3
 
 
     </style>
