--- a/index.html
+++ b/index.html
@@ -578,7 +578,8 @@
             var lif=10
             var acti=5
             var acti=5
-            var kills
+            var kills=0
+            
 
 
     </style>
