--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
             var acti=5
             var acti=5
             var kills=0
-            var 
+            var target
 
 
     </style>
