--- a/index.html
+++ b/index.html
@@ -579,7 +579,8 @@
             var acti=5
             var acti=5
             var kills=0
-            var target
+            var target=10
+            
 
 
     </style>
