--- a/index.html
+++ b/index.html
@@ -581,7 +581,8 @@
             var kills=0
             var target=10
             var wave=2
-            canva.height=
+            canva.height=window.innerHeight-5
+            
 
 
     </style>
