--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@
             var target=10
             var wave=2
             canva.height=window.innerHeight-5
+            canva.width=window.innerWidth-5
             
 
 
