--- a/index.html
+++ b/index.html
@@ -583,7 +583,9 @@
             var wave=2
             canva.height=window.innerHeight-5
             canva.width=window.innerWidth-5
-            
+            const cha={
+                
+            }
 
 
     </style>
