--- a/index.html
+++ b/index.html
@@ -588,7 +588,8 @@
                 y:540,
                 cx:82,
                 cy:552,
-                
+                size:12,
+                ex:
             }
 
 
