--- a/index.html
+++ b/index.html
@@ -591,7 +591,9 @@
                 size:12,
                 ex:82,
                 ey:552,
-                esize: 
+                esize:10,
+                ix:82,
+                
             }
 
 
