--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                 ix:82,
                 iy:552,
                 isize:5,
-                
+                width:25,
 
             }
 
