--- a/index.html
+++ b/index.html
@@ -600,7 +600,9 @@
                 dx:7,
                 dy:7,
             }
-            
+            const zomb={
+                
+            }
 
 
     </style>
