--- a/index.html
+++ b/index.html
@@ -602,7 +602,8 @@
             }
             const zomb={
                 x=200,
-
+                y=350,
+                eyx:200,
             }
 
 
