--- a/index.html
+++ b/index.html
@@ -604,6 +604,8 @@
                 x=200,
                 y=350,
                 eyx:200,
+                eyy:350,
+                
             }
 
 
