--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@
                 y=350,
                 eyx:200,
                 eyy:350,
+                eysize:13,
                 
             }
 
