--- a/index.html
+++ b/index.html
@@ -606,7 +606,8 @@
                 eyx:200,
                 eyy:350,
                 eysize:13,
-                
+                irx:195,
+                iry:349,
             }
 
 
