--- a/index.html
+++ b/index.html
@@ -608,6 +608,8 @@
                 eysize:13,
                 irx:195,
                 iry:349,
+                irsize:7,
+                
             }
 
 
