--- a/index.html
+++ b/index.html
@@ -609,6 +609,7 @@
                 irx:195,
                 iry:349,
                 irsize:7,
+                size:17,
                 
             }
 
