--- a/index.html
+++ b/index.html
@@ -612,6 +612,9 @@
                 size:17,
                 dx:0.2,
                 dy:0.4,
+                //////////////////-2+2;-@;@;&2 ahsbshsh
+                x2:200,
+                y2:35,
                 
             }
 
