--- a/index.html
+++ b/index.html
@@ -615,6 +615,8 @@
                 //////////////////-2+2;-@;@;&2 ahsbshsh
                 x2:200,
                 y2:35,
+                eyx2:200,
+                eyy2:35,
                 
             }
 
