--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@
                 y2:35,
                 eyx2:200,
                 eyy2:35,
+                eysize2:10,
                 
             }
 
