--- a/index.html
+++ b/index.html
@@ -618,6 +618,8 @@
                 eyx2:200,
                 eyy2:35,
                 eysize2:10,
+                irx2:205,
+                iry2:36,
                 
             }
 
