--- a/index.html
+++ b/index.html
@@ -620,6 +620,8 @@
                 eysize2:10,
                 irx2:205,
                 iry2:36,
+                irsize2:5,
+                size2:20,
                 
             }
 
