--- a/index.html
+++ b/index.html
@@ -627,7 +627,8 @@
                 //////////////////-2+2;-@;@;&2 ahsbshsh
                 x3:20,
                 y3:150,
-
+                eyx3:20,
+                eyy3:150,
             }
 
 
