--- a/index.html
+++ b/index.html
@@ -629,6 +629,9 @@
                 y3:150,
                 eyx3:20,
                 eyy3:150,
+                eysize3:5,
+                irx3:19,
+                
             }
 
 
