--- a/index.html
+++ b/index.html
@@ -631,7 +631,8 @@
                 eyy3:150,
                 eysize3:5,
                 irx3:19,
-                
+                iry3:150,
+                irsize3:2,
             }
 
 
