--- a/index.html
+++ b/index.html
@@ -633,6 +633,9 @@
                 irx3:19,
                 iry3:150,
                 irsize3:2,
+                size3:10,
+                dxy3:0.4,
+                
             }
 
 
