--- a/index.html
+++ b/index.html
@@ -640,6 +640,7 @@
                 x4:300,
                 y4:100,
                 eyx4:300,
+                eyy4:100,
                 
             }
 
