--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@
                 y4:100,
                 eyx4:300,
                 eyy4:100,
+                eysize4:10,
                 
             }
 
