--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 eyx4:300,
                 eyy4:100,
                 eysize4:10,
-                
+                irx4:300,
             }
 
 
