--- a/index.html
+++ b/index.html
@@ -643,6 +643,7 @@
                 eyy4:100,
                 eysize4:10,
                 irx4:300,
+                iry4:100,
                 irsize4:5,
             }
 
