--- a/index.html
+++ b/index.html
@@ -651,9 +651,9 @@
             }
 
             const spot={
-                x=80,
-                y=550,
-                
+                x:80,
+                y:550,
+                size:55,
             }
 
 
