--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
                 x:80,
                 y:550,
                 size:55,
+                stroke:'rgba(255,225,225,0.5)',
             }
 
 
