--- a/index.html
+++ b/index.html
@@ -655,7 +655,11 @@
                 y:550,
                 size:55,
                 stroke:'rgba(255,255,255,0.5)',
-                fill:
+                fill: 'rgba(255,255,255,0.5)',
+                color:'grey'
+            }
+            function draw(){
+                ctx.negin
             }
 
 
