--- a/index.html
+++ b/index.html
@@ -659,7 +659,8 @@
                 color:'grey'
             }
             function draw(){
-                ctx.negin
+                ctx.beginPath()
+                ctx.strokeStyle=spot.
             }
 
 
