--- a/index.html
+++ b/index.html
@@ -660,7 +660,8 @@
             }
             function draw(){
                 ctx.beginPath()
-                ctx.strokeStyle=spot.
+                ctx.strokeStyle=spot.stroke
+                ctx.fill
             }
 
 
