--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
             function draw(){
                 ctx.beginPath()
                 ctx.strokeStyle=spot.stroke
-                ctx.fill
+                ctx.fillSTyle=spot.fill
             }
 
 
