--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@
                 ctx.beginPath()
                 ctx.strokeStyle=spot.stroke
                 ctx.fillSTyle=spot.fill
+                ctx.arc(spot.x,spot.y,spot.size)
             }
 
 
