--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                 ctx.beginPath()
                 ctx.strokeStyle=spot.stroke
                 ctx.fillSTyle=spot.fill
-                ctx.arc(spot.x,spot.y,spot.size)
+                ctx.arc(spot.x,spot.y,spot.size,0,Math.PI*2,false)
             }
 
 
