--- a/index.html
+++ b/index.html
@@ -663,6 +663,8 @@
                 ctx.strokeStyle=spot.stroke
                 ctx.fillSTyle=spot.fill
                 ctx.arc(spot.x,spot.y,spot.size,0,Math.PI*2,false)
+                ctx.fill()
+                
             }
 
 
