--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                 ctx.fillSTyle=spot.fill
                 ctx.arc(spot.x,spot.y,spot.size,0,Math.PI*2,false)
                 ctx.fill()
-                
+                ctx.stroke()
             }
 
 
