--- a/index.html
+++ b/index.html
@@ -666,6 +666,9 @@
                 ctx.fill()
                 ctx.stroke()
             }
+            function draw1(){
+                
+            }
 
 
     </style>
