--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                 ctx.stroke()
             }
             function draw1(){
-                
+                ctx.beginPath
             }
 
 
