--- a/index.html
+++ b/index.html
@@ -667,7 +667,8 @@
                 ctx.stroke()
             }
             function draw1(){
-                ctx.beginPath
+                ctx.beginPath()
+                
             }
 
 
