--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
             }
             function draw1(){
                 ctx.beginPath()
-                
+                ctx.fillStyle=
                 
             }
 
