--- a/index.html
+++ b/index.html
@@ -669,6 +669,7 @@
             function draw1(){
                 ctx.beginPath()
                 ctx.fillStyle="brown"
+                ctx.strokeStyle="black"
                 
                 
             }
