--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
                 ctx.beginPath()
                 ctx.fillStyle="brown"
                 ctx.strokeStyle="black"
-                
+                ctx.arc()
                 
             }
 
