--- a/index.html
+++ b/index.html
@@ -671,6 +671,8 @@
                 ctx.fillStyle="brown"
                 ctx.strokeStyle="black"
                 ctx.arc(cha.cx,cha.cy,cha.size,0,Math.PI*2,false)
+                ctx.beginPath()
+                
                 
             }
 
