--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                 ctx.strokeStyle="black"
                 ctx.arc(cha.cx,cha.cy,cha.size,0,Math.PI*2,false)
                 ctx.beginPath()
-                
+                ctx.fillRect()
                 
             }
 
