--- a/index.html
+++ b/index.html
@@ -673,6 +673,7 @@
                 ctx.arc(cha.cx,cha.cy,cha.size,0,Math.PI*2,false)
                 ctx.beginPath()
                 ctx.fillRect(cha.x,cha.y,cha.width,cha.height)
+                ctx.fill()
                 
                 
             }
