--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
                 ctx.beginPath()
                 ctx.fillRect(cha.x,cha.y,cha.width,cha.height)
                 ctx.fill()
+                ctx.stroke()
                 
                 
             }
