--- a/index.html
+++ b/index.html
@@ -675,6 +675,7 @@
                 ctx.fillRect(cha.x,cha.y,cha.width,cha.height)
                 ctx.fill()
                 ctx.stroke()
+                ctx.beginPath()
                 
                 
             }
