--- a/index.html
+++ b/index.html
@@ -676,6 +676,7 @@
                 ctx.fill()
                 ctx.stroke()
                 ctx.beginPath()
+                ctx.fillStyle="white"
                 
                 
             }
