--- a/index.html
+++ b/index.html
@@ -677,7 +677,8 @@
                 ctx.stroke()
                 ctx.beginPath()
                 ctx.fillStyle="white"
-                
+                ctx.arc(cha.ex,cha.ey.chaesize,0,Math.PI*2,false)
+                ctx.
                 
             }
 
