--- a/index.html
+++ b/index.html
@@ -678,7 +678,8 @@
                 ctx.beginPath()
                 ctx.fillStyle="white"
                 ctx.arc(cha.ex,cha.ey.chaesize,0,Math.PI*2,false)
-                ctx.
+                ctx.fill()
+                
                 
             }
 
