--- a/index.html
+++ b/index.html
@@ -679,6 +679,7 @@
                 ctx.fillStyle="white"
                 ctx.arc(cha.ex,cha.ey.chaesize,0,Math.PI*2,false)
                 ctx.fill()
+                ctx.stroke()
                 
                 
             }
