--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@
                 ctx.arc(cha.ex,cha.ey.chaesize,0,Math.PI*2,false)
                 ctx.fill()
                 ctx.stroke()
+                ctx.beginPath()
                 
                 
             }
