--- a/index.html
+++ b/index.html
@@ -681,7 +681,9 @@
                 ctx.fill()
                 ctx.stroke()
                 ctx.beginPath()
+                ctx.strokeStyle="black"
                 
+                ctx.arc()
                 
             }
 
