--- a/index.html
+++ b/index.html
@@ -682,8 +682,9 @@
                 ctx.stroke()
                 ctx.beginPath()
                 ctx.strokeStyle="black"
+                ctx.fillStyle="black"
+                ctx.arc(cha.ix,cha.iy,cha.isize,0,Math.PI*2,false)
                 
-                ctx.arc()
                 
             }
 
