--- a/index.html
+++ b/index.html
@@ -684,6 +684,7 @@
                 ctx.strokeStyle="black"
                 ctx.fillStyle="black"
                 ctx.arc(cha.ix,cha.iy,cha.isize,0,Math.PI*2,false)
+                ctx.fill()
                 
                 
             }
