--- a/index.html
+++ b/index.html
@@ -685,7 +685,8 @@
                 ctx.fillStyle="black"
                 ctx.arc(cha.ix,cha.iy,cha.isize,0,Math.PI*2,false)
                 ctx.fill()
-                
+                ctx.beingPath()
+
                 
             }
 
