--- a/index.html
+++ b/index.html
@@ -686,8 +686,7 @@
                 ctx.arc(cha.ix,cha.iy,cha.isize,0,Math.PI*2,false)
                 ctx.fill()
                 ctx.beingPath()
-
-                
+                ctx.stroke()
             }
 
 
