--- a/index.html
+++ b/index.html
@@ -688,6 +688,9 @@
                 ctx.beingPath()
                 ctx.stroke()
             }
+            function draw2(){
+                
+            }
 
 
     </style>
