--- a/index.html
+++ b/index.html
@@ -689,6 +689,7 @@
                 ctx.stroke()
             }
             function draw2(){
+                ctx.beginPath()
                 
             }
 
