--- a/index.html
+++ b/index.html
@@ -690,6 +690,7 @@
             }
             function draw2(){
                 ctx.beginPath()
+                ctx.fillStyle="teal"
                 
             }
 
