--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
             function draw2(){
                 ctx.beginPath()
                 ctx.fillStyle="teal"
-                
+                ctx.arc()
             }
 
 
