--- a/index.html
+++ b/index.html
@@ -691,7 +691,8 @@
             function draw2(){
                 ctx.beginPath()
                 ctx.fillStyle="teal"
-                ctx.arc()
+                ctx.arc(zomb.x,zomb.y,zomb.size,0,Math.PI*2,false)
+                
             }
 
 
