--- a/index.html
+++ b/index.html
@@ -692,6 +692,7 @@
                 ctx.beginPath()
                 ctx.fillStyle="teal"
                 ctx.arc(zomb.x,zomb.y,zomb.size,0,Math.PI*2,false)
+                ctx.fill()
                 
             }
 
