--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
                 ctx.fillStyle="teal"
                 ctx.arc(zomb.x,zomb.y,zomb.size,0,Math.PI*2,false)
                 ctx.fill()
+                ctx.beginPath()
                 
             }
 
