--- a/index.html
+++ b/index.html
@@ -694,6 +694,7 @@
                 ctx.arc(zomb.x,zomb.y,zomb.size,0,Math.PI*2,false)
                 ctx.fill()
                 ctx.beginPath()
+                ctx.fillStyle="White"
                 
             }
 
