--- a/index.html
+++ b/index.html
@@ -695,6 +695,7 @@
                 ctx.fill()
                 ctx.beginPath()
                 ctx.fillStyle="White"
+                ctx.strokeStyle="black"
                 
             }
 
