--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                 ctx.beginPath()
                 ctx.fillStyle="White"
                 ctx.strokeStyle="black"
-                
+                ctx.arc()
             }
 
 
