--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                 ctx.beginPath()
                 ctx.fillStyle="White"
                 ctx.strokeStyle="black"
-                ctx.arc()
+                ctx.arc(zomb.eyx,zomb.eyy,zomb.eysize,0,Math.PI*2,)
             }
 
 
