--- a/index.html
+++ b/index.html
@@ -696,7 +696,9 @@
                 ctx.beginPath()
                 ctx.fillStyle="White"
                 ctx.strokeStyle="black"
-                ctx.arc(zomb.eyx,zomb.eyy,zomb.eysize,0,Math.PI*2,)
+                ctx.arc(zomb.eyx,zomb.eyy,zomb.eysize,0,Math.PI*2,false)
+                ctx.fill()
+                
             }
 
 
