--- a/index.html
+++ b/index.html
@@ -698,6 +698,7 @@
                 ctx.strokeStyle="black"
                 ctx.arc(zomb.eyx,zomb.eyy,zomb.eysize,0,Math.PI*2,false)
                 ctx.fill()
+                ctx.stroke()
                 
             }
 
