--- a/index.html
+++ b/index.html
@@ -699,6 +699,7 @@
                 ctx.arc(zomb.eyx,zomb.eyy,zomb.eysize,0,Math.PI*2,false)
                 ctx.fill()
                 ctx.stroke()
+                ctx.beginPath()
                 
             }
 
