--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
                 ctx.fill()
                 ctx.stroke()
                 ctx.beginPath()
+                ctx.acr()
                 
             }
 
