--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                 ctx.fill()
                 ctx.stroke()
                 ctx.beginPath()
-                ctx.acr()
+                ctx.acr(zomb.irx,zomb.iry,zomb.irsize,0,)
                 
             }
 
