--- a/index.html
+++ b/index.html
@@ -701,6 +701,8 @@
                 ctx.stroke()
                 ctx.beginPath()
                 ctx.acr(zomb.irx,zomb.iry,zomb.irsize,0,Math.PI*2,false)
+                ctx.fill()
+                
                 
             }
 
