--- a/index.html
+++ b/index.html
@@ -703,6 +703,9 @@
                 ctx.acr(zomb.irx,zomb.iry,zomb.irsize,0,Math.PI*2,false)
                 ctx.fill()
             }
+            functiondraw4(){
+                
+            }
 
 
     </style>
