--- a/index.html
+++ b/index.html
@@ -704,6 +704,7 @@
                 ctx.fill()
             }
             functiondraw4(){
+                ctx.beginPath()
                 
             }
 
