--- a/index.html
+++ b/index.html
@@ -705,6 +705,7 @@
             }
             functiondraw4(){
                 ctx.beginPath()
+                ctx.fillStyle="White"
                 
             }
 
