--- a/index.html
+++ b/index.html
@@ -719,6 +719,9 @@
                 ctx.arc(zomb.irx2,zomb.iry2,zomb.irsize2,0,Math.PI*2,false)
                 ctx.fill()
             }
+            function draw5(){
+                
+            }
 
 
     </style>
