--- a/index.html
+++ b/index.html
@@ -720,6 +720,7 @@
                 ctx.fill()
             }
             function draw5(){
+                ctx.beginPath()
                 
             }
 
