--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             }
             function draw5(){
                 ctx.beginPath()
-                
+                ctx.fillStyle="white"
             }
 
 
