--- a/index.html
+++ b/index.html
@@ -722,6 +722,8 @@
             function draw5(){
                 ctx.beginPath()
                 ctx.fillStyle="red"
+                
+                ctx.strokeStyle
             }
 
 
