--- a/index.html
+++ b/index.html
@@ -722,7 +722,10 @@
             function draw5(){
                 ctx.beginPath()
                 ctx.fillStyle="red"
+                ctx.arc(zomb.x3,zomb.eyy3,zomb.eysize3,0,Math.PI*2,false)
                 
+
+
                 ctx.strokeStyle
             }
 
