--- a/index.html
+++ b/index.html
@@ -723,6 +723,7 @@
                 ctx.beginPath()
                 ctx.fillStyle="red"
                 ctx.arc(zomb.x3,zomb.eyy3,zomb.eysize3,0,Math.PI*2,false)
+                ctx.fill()
                 
 
 
