--- a/index.html
+++ b/index.html
@@ -724,6 +724,7 @@
                 ctx.fillStyle="red"
                 ctx.arc(zomb.x3,zomb.eyy3,zomb.eysize3,0,Math.PI*2,false)
                 ctx.fill()
+                ctx.beginPath()
                 
 
 
