--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
                 ctx.arc(zomb.x3,zomb.eyy3,zomb.eysize3,0,Math.PI*2,false)
                 ctx.fill()
                 ctx.beginPath()
-                
+                ctx.fillStyle=""
 
 
                 ctx.strokeStyle
