--- a/index.html
+++ b/index.html
@@ -726,9 +726,8 @@
                 ctx.fill()
                 ctx.beginPath()
                 ctx.fillStyle="white"
-
-
-                ctx.strokeStyle
+                ctx.strokeStyle="black"
+                
             }
 
 
