--- a/index.html
+++ b/index.html
@@ -727,7 +727,13 @@
                 ctx.beginPath()
                 ctx.fillStyle="white"
                 ctx.strokeStyle="black"
-                
+                ctx.arc(zomb.eyx3,zomb.eyy3,zomb.eysize3,0,Math.PI*2,false)
+ctx.fill()
+ctx.stroke()
+ctx.beginPath()
+ctx.fillStyle="aquamarine"
+ctx.arc(zomb.irx3,zomb.iry3,zomb.irsize3,0,Math.PI*2,false)
+ctx.fill()
             }
 
 
