--- a/index.html
+++ b/index.html
@@ -734,6 +734,7 @@
                 ctx.fillStyle="aquamarine"
                 ctx.arc(zomb.irx3,zomb.iry3,zomb.irsize3,0,Math.PI*2,false)
                 ctx.fill()
+                ctx.stroke()
             }
 
 
