--- a/index.html
+++ b/index.html
@@ -736,7 +736,9 @@
                 ctx.fill()
                 ctx.stroke()
             }
-
+            function draw3(mx,my){
+                
+            }
 
     </style>
 
