--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                 ctx.stroke()
             }
             function draw3(mx,my){
-                
+                ctx.beginPath
             }
 
     </style>
