--- a/index.html
+++ b/index.html
@@ -737,7 +737,8 @@
                 ctx.stroke()
             }
             function draw3(mx,my){
-                ctx.beginPath
+                ctx.beginPath()
+                ctx.lineWidth="1.5"
             }
 
     </style>
