--- a/index.html
+++ b/index.html
@@ -739,6 +739,8 @@
             function draw3(mx,my){
                 ctx.beginPath()
                 ctx.lineWidth="1.5"
+                ctx.strokeStyle="red"
+                
             }
 
     </style>
