--- a/index.html
+++ b/index.html
@@ -740,6 +740,7 @@
                 ctx.beginPath()
                 ctx.lineWidth="1.5"
                 ctx.strokeStyle="red"
+                ctx.moveTo(cha.cx,cha.cy)
                 
             }
 
