--- a/index.html
+++ b/index.html
@@ -741,6 +741,7 @@
                 ctx.lineWidth="1.5"
                 ctx.strokeStyle="red"
                 ctx.moveTo(cha.cx,cha.cy)
+                ctx.lineTo(mx,my)
                 
             }
 
