--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                 ctx.strokeStyle="red"
                 ctx.moveTo(cha.cx,cha.cy)
                 ctx.lineTo(mx,my)
-                
+                ctx.stroke()
             }
 
     </style>
