--- a/index.html
+++ b/index.html
@@ -744,6 +744,9 @@
                 ctx.lineTo(mx,my)
                 ctx.stroke()
             }
+            function animate(){
+                
+            }
 
     </style>
 
