--- a/index.html
+++ b/index.html
@@ -746,6 +746,7 @@
             }
             function animate(){
                 g()
+                zomb.x+=zomb.dx
                 
             }
 
