--- a/index.html
+++ b/index.html
@@ -747,6 +747,7 @@
             function animate(){
                 g()
                 zomb.x+=zomb.dx
+                zomb.eyx+=zomb.dx
                 
             }
 
