--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
                 g()
                 zomb.x+=zomb.dx
                 zomb.eyx+=zomb.dx
+                zomb.eyy+=zomb.dy
                 
             }
 
