--- a/index.html
+++ b/index.html
@@ -749,6 +749,7 @@
                 zomb.x+=zomb.dx
                 zomb.eyx+=zomb.dx
                 zomb.eyy+=zomb.dy
+                zomb.irx+=zomb.dx
                 
             }
 
