--- a/index.html
+++ b/index.html
@@ -750,6 +750,7 @@
                 zomb.eyx+=zomb.dx
                 zomb.eyy+=zomb.dy
                 zomb.irx+=zomb.dx
+                zomb.iry+=zomb.dy
                 
             }
 
