--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                 zomb.eyy+=zomb.dy
                 zomb.irx+=zomb.dx
                 zomb.iry+=zomb.dy
-                
+                zomb.y+=zomb.dy
             }
 
     </style>
