--- a/index.html
+++ b/index.html
@@ -753,6 +753,7 @@
                 zomb.iry+=zomb.dy
                 zomb.y+=zomb.dy
 
+                zomb.x2+=zomb.dx2
                 
             }
 
