--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                 zomb.y+=zomb.dy
 
                 zomb.x2+=zomb.dx2
-                
+                zomb.eyx2+=zomb.dx2
             }
 
     </style>
