--- a/index.html
+++ b/index.html
@@ -755,6 +755,8 @@
 
                 zomb.x2+=zomb.dx2
                 zomb.eyx2+=zomb.dx2
+                zomb.eyy2+=zomb.dy2
+                
             }
 
     </style>
