--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@
                 zomb.x2+=zomb.dx2
                 zomb.eyx2+=zomb.dx2
                 zomb.eyy2+=zomb.dy2
+                zomb.irx2+=zomb.dx2
                 
             }
 
