--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@
                 zomb.eyx2+=zomb.dx2
                 zomb.eyy2+=zomb.dy2
                 zomb.irx2+=zomb.dx2
+                zomb.iry2+=zomb.dy2
                 
             }
 
