--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                 zomb.eyy2+=zomb.dy2
                 zomb.irx2+=zomb.dx2
                 zomb.iry2+=zomb.dy2
-                
+                zomb.y2+=
             }
 
     </style>
