--- a/index.html
+++ b/index.html
@@ -759,7 +759,10 @@
                 zomb.irx2+=zomb.dx2
                 zomb.iry2+=zomb.dy2
                 zomb.y2+=zomb.dy2
+
+                zomb.x3+=zomb.dx3
                 
+
             }
 
     </style>
