--- a/index.html
+++ b/index.html
@@ -761,6 +761,7 @@
                 zomb.y2+=zomb.dy2
 
                 zomb.x3+=zomb.dx3
+                zomb.eyx4+=zomb.dx3 
                 
 
             }
