--- a/index.html
+++ b/index.html
@@ -761,8 +761,8 @@
                 zomb.y2+=zomb.dy2
 
                 zomb.x3+=zomb.dx3
-                zomb.eyx4+=zomb.dx3 
-                
+                zomb.eyx3+=zomb.dx3 
+                zomb.eyy3+=zomb.dy3
 
             }
 
