--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
 
                 zomb.x3+=zomb.dx3
                 zomb.eyx3+=zomb.dx3 
-                zomb.eyy3+=zomb.dy32346fvc
+                zomb.eyy3+=zomb.dy3
 
             }
 
