--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title></title>
+    <title>JS </title>
     <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1, user-scalable=0">
 </head>
 <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Allerta+Stencil|Anton|Audiowide|Coiny|Dancing+Script|Diplomata+SC|Do+Hyeon|Erica+One|Faster+One|Fontdiner+Swanky|Freckle+Face|Fredericka+the+Great|Great+Vibes|Hanalei+Fill|Henny+Penny|Homemade+Apple|Indie+Flower|Jua|Megrim|Metal+Mania|Monoton|Monsieur+La+Doulaise|Niconne|Oleo+Script+Swash+Caps|Pacifico|Parisienne|Permanent+Marker|Press+Start+2P|Sacramento|Satisfy|Shojumaru|Special+Elite|Stalinist+One|Tangerine|Ubuntu|UnifrakturCook:700|Yatra+One|Yellowtail|Yesteryear|Nosifer|Iceberg|New+Rocker|Bubblegum+Sans" rel="stylesheet">
